Decrease effect of spacing error in Opera, until resolved.

--- a/app/assets/stylesheets/desktop/_camp.sass
+++ b/app/assets/stylesheets/desktop/_camp.sass
@@ -4,14 +4,13 @@
 
   +at-breakpoint($break6)
     background-image: image-url("heroes/camp-hero-800.jpg")
-    background-position: center center
 
   +at-breakpoint($break9)
     background-image: image-url("heroes/camp-hero-1024.jpg")
-    background-position: center bottom
 
   +at-breakpoint($break12)
     background-image: image-url("heroes/camp-hero.jpg")
+    background-position: center center
 
 $shrink: .618
 
