--- a/app/assets/stylesheets/desktop/_language.sass
+++ b/app/assets/stylesheets/desktop/_language.sass
@@ -9,7 +9,7 @@
 
   +at-breakpoint($break9)
     background-image: image-url("heroes/language-hero-1024.jpg")
-    background-position: center top
+    background-position: center center
 
   +at-breakpoint($break12)
     background-image: image-url("heroes/language-hero.jpg")
