--- a/app/assets/stylesheets/desktop/_news.sass
+++ b/app/assets/stylesheets/desktop/_news.sass
@@ -1,6 +1,5 @@
 #news
   background-image: image-url("heroes/news-hero-600.jpg")
-  background-position: center center
 
   +at-breakpoint($break6)
     background-image: image-url("heroes/news-hero-800.jpg")
@@ -10,7 +9,6 @@
 
   +at-breakpoint($break12)
     background-image: image-url("heroes/news-hero.jpg")
-    background-position: center bottom
 
 #newsletters
   padding: $scale2 0 0
