--- a/app/assets/stylesheets/desktop/_pages.sass
+++ b/app/assets/stylesheets/desktop/_pages.sass
@@ -26,7 +26,7 @@ $reduce: 2
 .hero
   text-align: center
   background-color: $yellow
-  background-position: center top
+  background-position: center center
   background-repeat: no-repeat
   h1, h2
     color: $font-white
