--- a/app/assets/stylesheets/mobile/_camp.sass
+++ b/app/assets/stylesheets/mobile/_camp.sass
@@ -4,7 +4,6 @@
 
   +at-breakpoint($break6)
     background-image: image-url("heroes/camp-hero-800.jpg")
-    background-position: center center
 
 $shrink: .618
 
