--- a/app/assets/stylesheets/mobile/_news.sass
+++ b/app/assets/stylesheets/mobile/_news.sass
@@ -1,6 +1,5 @@
 #news
   background-image: image-url("heroes/news-hero-600.jpg")
-  background-position: center center
 
   +at-breakpoint($break6)
     background-image: image-url("heroes/news-hero-800.jpg")
