--- a/app/assets/stylesheets/mobile/_pages.sass
+++ b/app/assets/stylesheets/mobile/_pages.sass
@@ -20,7 +20,7 @@ $reduce: 2
 .hero
   text-align: center
   background-color: $yellow
-  background-position: center top
+  background-position: center center
   background-repeat: no-repeat
   h1, h2
     color: $font-white
